doc: add readme.md based on current features (#11)